cluster-status-monitor/deploy/openshift/csm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-status-monitor
  labels:
    app: cluster-status-monitor
spec:
  selector:
    app: cluster-status-monitor
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
  type: ClusterIP
